# GRPO-reasoning

./: .gitignore  README.md  gemma2-2b-r1-math.ipynb  pyproject.toml  requirements.txt
